--- a/adopciones.html
+++ b/adopciones.html
@@ -56,7 +56,7 @@
     <!--------------------------------------------------------------------  -->
 
     <section id="adopciones" class="adopciones">
-        <p>Conoce a todas las mascotas que esperan formar parte de una familia y una adopción responsable </p>
+        <p>Conocé a todas las mascotas que esperan formar parte de una familia y una adopción responsable </p>
     </section>
 
     <main class="contenedorMascotas">
@@ -175,6 +175,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ac484d389e.js" crossorigin="anonymous"></script>
+
 </body>
 
 </body>
