--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
     <div class="landing">
-        <video class="video-bg" autoplay muted loop>
+        <video class="video-bg" autoplay loop>
             <source src="video/Quienessomospatitas.mp4" type="video/mp4">
             <!-- Agrega más formatos de video si es necesario -->
         </video>
