--- a/contacto.html
+++ b/contacto.html
@@ -54,27 +54,40 @@
 
     </header>
 
-    <main>
+    <section class="contacto">
 
-        <form class="mi-formulario">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
-
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
-
-            <input type="submit" value="Enviar">
-        </form>
-
-        <div class="whatsapp-btn">
-            <a href="https://api.whatsapp.com/send?phone=TUNUMERO">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/767px-WhatsApp.svg.png"
-                    alt="WhatsApp">
-            </a>
+        <div class="container justify-content-center">
+            <div class="formulario">
+                <h2>Contacto</h2>
+                <form action="#">
+                    <div class="campo">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" name="nombre" required placeholder="Ej: Brenda mayan">
+                    </div>
+                    <div class="campo">
+                        <label for="email">Correo Electrónico:</label>
+                        <input type="email" id="email" name="email" required placeholder="Ej: mail@xxxx.com">
+                    </div>
+                    <div class="campo comentario">
+                        <label for="comentario">Comentario:</label>
+                        <textarea id="comentario" name="comentario" required placeholder="Ej: Me gustaria adoptar con ustedes!"></textarea>
+                    </div>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+            <div class="mapa">
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1109773217123!2d-75.59888998468962!3d6.241818895484164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442bb20129d0d7%3A0x427a9f4f7ed84a0!2sOpenAI!5e0!3m2!1sen!2sus!4v1631042249078!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
 
+    </section>
 
-    </main>
+    <div class="whatsapp-btn">
+        <a href="https://api.whatsapp.com/send?phone=TUNUMERO">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/767px-WhatsApp.svg.png"
+                alt="WhatsApp">
+        </a>
+    </div>
 
     <!-- Footer -->
 
