--- a/nosotros.html
+++ b/nosotros.html
@@ -3,14 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Conoce quienes somos y que hacemos en Patitas de amor">
+    <meta name="description" content="Conocé a quienes hacen posible que Patitas de amor exista">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros | Patitas de amor </title>
-    <link rel="shortcut icon"
-        href="perritos/shy-dog-logo-illustration-depicting-shy-dog-suitable-for-pet-company-free-vector.jpg"
-        type="image/x-icon">
-    <!-- CSS -->
+    <title>Nosotros | Patitas de amor</title>
     <link rel="stylesheet" href="css/estilo.css">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- BS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -54,6 +52,78 @@
 
     </header>
 
+    <!--------------------------------------------------------------------  -->
+
+    <section id="personas" class="personas">
+        <p>Conocé a todas las mascotas que esperan formar parte de una familia y una adopción responsable </p>
+    </section>
+
+    <main class="contenedorPersonas">
+
+        <div data-aos="fade-up" data-aos-duration="3000" class="persona">
+            <img src="personas/julia.jpeg" alt="Persona Julia">
+            <p>Anita</p>
+            <p>La dedicación de Anita no tiene límites. Incluso después de que los perros son adoptados, él sigue
+                brindando apoyo y orientación a las familias, asegurándose de que la transición sea exitosa y de que los
+                perros sean amados y cuidados adecuadamente.
+
+                La labor de Anita como rescatista de perros es un verdadero acto de amor y compasión. Su compromiso
+                con estos animales sin voz y su incansable búsqueda de un mejor futuro para ellos es inspirador. Cada
+                vida canina que toca se transforma gracias a su generosidad y dedicación.</p>
+
+        </div>
+
+        <div data-aos="fade-up" data-aos-duration="3000" class="persona">
+            <img src="personas/malena.jpeg" alt="Persona Malena">
+            <p>Malena</p>
+            <p>Es una persona extraordinaria y apasionada que dedica su vida a rescatar perros. Desde temprana
+                edad, su amor y empatía hacia estos adorables animales la han impulsado a tomar acciones concretas para
+                ayudarlos.
+
+                Malena es una mujer de corazón bondadoso y una energía inagotable. Su dedicación a rescatar perros va
+                más allá de lo meramente superficial.</p>
+
+        </div>
+
+        <div data-aos="fade-up" data-aos-duration="3000" class="persona">
+            <img src="personas/marcos.jpeg" alt="Persona Marcos">
+            <p>Marcos</p>
+            <p>Es una inspiración para aquellos que tienen la suerte de conocerla. Su dedicación incansable, su
+                amor incondicional por los animales y su deseo de hacer del mundo un lugar mejor para ellos son un
+                ejemplo admirable. Su trabajo incansable y compromiso con los perros necesitados ha cambiado
+                innumerables vidas, tanto de los animales como de las personas que han tenido la suerte de cruzarse en
+                su camino..</p>
+
+        </div>
+
+        <div data-aos="fade-up" data-aos-duration="3000" class="persona">
+            <img src="personas/Laura.jpeg" alt="Persona Laura">
+            <p>Laura</p>
+            <p>Es una persona extraordinaria que ha encontrado su propósito en rescatar perros. Su amor, compasión y
+                determinación son ejemplos claros de cómo una persona puede marcar la diferencia en la vida de los
+                animales más vulnerables. Su trabajo es un recordatorio constante de la importancia de cuidar y proteger
+                a aquellos que no pueden hacerlo por sí mismos.</p>
+
+        </div>
+
+        <div data-aos="fade-up" data-aos-duration="3000" class="persona">
+            <img src="personas/lucas.avif" alt="Persona Lucas">
+            <p>Lucas</p>
+            <p>Una vez que los perros están a salvo, Lucas se asegura de que reciban atención veterinaria adecuada.
+                Trabaja estrechamente con profesionales de la salud animal para curar sus heridas, tratar enfermedades y
+                proporcionarles las vacunas necesarias. Su dedicación incansable garantiza que cada perro rescatado
+                tenga la oportunidad de recuperarse y disfrutar de una vida plena.</p>
+
+        </div>
+
+
+
+    </main>
+
+
+
+
+    <!-- ------------------------------------------------------------------------- -->
 
     <div class="whatsapp-btn">
         <a href="https://api.whatsapp.com/send?phone=TUNUMERO">
@@ -69,9 +139,9 @@
         <div class="footerContenido">
             <div class="infoContacto">
                 <h4>Contacto</h4>
-                <p><i class="fas fa-map-marker-alt"></i> Dirección: Bermudez 4444</p>
-                <p><i class="fas fa-phone"></i> Teléfono: +5411 3333 3333</p>
-                <p><i class="fas fa-envelope"></i> Email: info@patitasdeamor.com</p>
+                <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa, 123</p>
+                <p><i class="fas fa-phone"></i> Teléfono: +123 456 789</p>
+                <p><i class="fas fa-envelope"></i> Email: info@coderviajes.com</p>
             </div>
             <div class="redesSociales">
                 <h4>Redes Sociales</h4>
@@ -88,10 +158,20 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ac484d389e.js" crossorigin="anonymous"></script>
+
+</body>
+
 </body>
 
 </html>
