--- a/nosotros.html
+++ b/nosotros.html
@@ -55,7 +55,7 @@
     <!--------------------------------------------------------------------  -->
 
     <section id="personas" class="personas">
-        <p>Conocé a todas las mascotas que esperan formar parte de una familia y una adopción responsable </p>
+        <p>Nosotros somos los que hacemos posible Patitas de amor! Conocenos!  </p>
     </section>
 
     <main class="contenedorPersonas">
