--- a/adopciones.html
+++ b/adopciones.html
@@ -7,12 +7,13 @@
         content="Conoce a todas las mascotas que esperan formar parte de una familia y una adopción responsable ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adopciones | Patitas de amor</title>
-    <link rel="stylesheet" href="css/estilo.css">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- BS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -121,7 +122,7 @@
                 laboriosam magni adipisci accusantium iusto similique nisi consectetur eaque soluta sint odio culpa
                 accusamus eligendi!</p>
             <button class="boton">Adoptar</button>
-        
+
         </div>
 
     </main>
