--- a/contacto.html
+++ b/contacto.html
@@ -9,11 +9,11 @@
     <link rel="shortcut icon"
         href="perritos/shy-dog-logo-illustration-depicting-shy-dog-suitable-for-pet-company-free-vector.jpg"
         type="image/x-icon">
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/estilo.css">
     <!-- BS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -70,13 +70,16 @@
                     </div>
                     <div class="campo comentario">
                         <label for="comentario">Comentario:</label>
-                        <textarea id="comentario" name="comentario" required placeholder="Ej: Me gustaria adoptar con ustedes!"></textarea>
+                        <textarea id="comentario" name="comentario" required
+                            placeholder="Ej: Me gustaria adoptar con ustedes!"></textarea>
                     </div>
                     <button type="submit">Enviar</button>
                 </form>
             </div>
             <div class="mapa">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1109773217123!2d-75.59888998468962!3d6.241818895484164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442bb20129d0d7%3A0x427a9f4f7ed84a0!2sOpenAI!5e0!3m2!1sen!2sus!4v1631042249078!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1109773217123!2d-75.59888998468962!3d6.241818895484164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442bb20129d0d7%3A0x427a9f4f7ed84a0!2sOpenAI!5e0!3m2!1sen!2sus!4v1631042249078!5m2!1sen!2sus"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
 
