--- a/nosotros.html
+++ b/nosotros.html
@@ -6,13 +6,14 @@
     <meta name="description" content="Conocé a quienes hacen posible que Patitas de amor exista">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros | Patitas de amor</title>
-    <link rel="stylesheet" href="css/estilo.css">
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- BS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/estilo.css">
+     <!-- AOS -->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    </head>
 
 <body>
 
